--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -2,10 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "baker-signet-web", serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
 body {
     background-color: #cb6c32;
+    margin: 3%;
 }
 
 header {
@@ -27,17 +31,28 @@ footer {
     padding-left: 1%;
 }
 
+h2{
+    font-family: "baker-signet-web", serif;
+    font-weight: 730;
+    font-style: normal;
+}
+
+h1{
+    color: #ebcd9b;
+}
+
 .logo {
     cursor: pointer; 
 }
 
 .knop {
     width: 15vw;
+    height: 7vh; 
     background-color: #cb6c32;
     color: #ebcd9b;
     text-align: center;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
     transition: 0.7s;
 }
