--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -30,23 +30,27 @@ footer {
     padding-left: 1%;
 }
 
-h2{
+main {
+    flex: 1;
+}
+
+h2 {
     font-family: "baker-signet-web", serif;
     font-weight: 730;
     font-style: normal;
 }
 
-h1{
+h1 {
     color: #ebcd9b;
 }
 
 .logo {
-    cursor: pointer; 
+    cursor: pointer;
 }
 
-.knop {
+.knop, .knop a {
     width: 15vw;
-    height: 7vh; 
+    height: 7vh;
     background-color: #cb6c32;
     color: #ebcd9b;
     text-align: center;
@@ -54,13 +58,27 @@ h1{
     border-radius: 15px;
     cursor: pointer;
     transition: 0.7s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 }
 
-.knop h2 {
+.knop h2, .knop a h2 {
     margin: 0;
+    color: inherit;
 }
 
-.knop:hover {
+.knop a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.knop a:hover {
+    text-decoration: none;
+}
+
+.knop:hover, .knop a:hover {
     transition: 0.35s;
     color: #cb6c32;
     background-color: #ebcd9b;
@@ -81,7 +99,7 @@ h1{
     gap: 10%;
 }
 
-.knop_f { 
+.knop_f {
     color: #cb6c32;
     cursor: pointer;
 }
@@ -92,5 +110,9 @@ h1{
 
 #link_youtube {
     color: #cb6c32;
+    text-decoration: none;
+}
+
+#producten {
     text-decoration: none;
 }
