--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -7,8 +7,19 @@
     font-style: normal;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
     background-color: #cb6c32;
+}
+
+main {
+    flex: 1 0 auto;
 }
 
 header {
@@ -22,16 +33,15 @@ header {
 }
 
 footer {
+    flex-shrink: 0;
     background-color: #ebcd9b;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-right: 3%;
-    padding-left: 1%;
-}
-
-main {
-    flex: 1;
+    padding: 10px 3% 10px 1%;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
 }
 
 h2 {
@@ -124,6 +134,12 @@ wij {
 
 }
 
+contact {
+    text-align: center;
+    height: 100vh !important;
+    line-height: 2;
+}
+
 .knop, .knop a {
     width: 15vw;
     height: 7vh;
@@ -160,7 +176,7 @@ wij {
     color: #cb6c32;
     background-color: #ebcd9b;
     outline-style: solid;
-    outline-width: 2px;
+    outline-width: 4px;
     outline-color: #cb6c32;
 }
 
