--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -138,6 +138,7 @@ contact {
     text-align: center;
     height: 100vh !important;
     line-height: 2;
+    padding-top: 10vh;
 }
 
 .knop, .knop a {
@@ -263,6 +264,60 @@ footer #knop_f:hover {
     cursor: pointer;
 }
 
+.carousel {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
+    background-color: #ffffff;
+}
+
+.carousel-images {
+    display: flex;
+    height: 100%;
+    transition: transform 0.5s ease-in-out;
+    width: 100%;
+}
+
+.carousel-images img {
+    width: 100%;
+    height: 80vh;
+    object-fit: cover;
+    flex-shrink: 0;
+}
+
+button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    border: none;
+    cursor: pointer;
+    z-index: 10;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+button.vorige {
+    left: 20px;
+}
+
+button.volgende {
+    right: 20px;
+}
+
+button.vorige,
+button.volgende {
+    z-index: 20;
+}
+
+svg {
+    color: #cb6c32;
+}
+
+
+
+
 /*Dit is een preset voor phone compatability, dit gaan jullie nodig hebben als je de testgrootte en knoppenformatie aan wil passen*/
 @media screen and (max-width: 767px) {
     #container p {
@@ -275,3 +330,7 @@ footer #knop_f:hover {
         margin-right: 20px;
     }
 }
+
+
+
+
