--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -93,7 +93,7 @@ button {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0);
     border: none;
     cursor: pointer;
     z-index: 10;
@@ -105,6 +105,10 @@ button.vorige {
     left: 20px;
 }
 
+button.vorige img {
+    transform: scaleX(-1);
+}
+
 button.volgende {
     right: 20px;
 }
@@ -114,9 +118,6 @@ button.volgende {
     z-index: 0;
 }
 
-svg {
-    color: #cb6c32;
-}
 
 .knop_href {
     text-decoration: none;
