--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -57,7 +57,7 @@ footer {
 }
 
 .contact {
-    text-align: center;
+    text-align: center;2
     height: 100vh !important;
     line-height: 2;
     padding-top: 10vh;
