--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -57,7 +57,7 @@ footer {
 }
 
 .contact {
-    text-align: center;2
+    text-align: center;
     height: 100vh !important;
     line-height: 2;
     padding-top: 10vh;
@@ -316,10 +316,6 @@ button.volgende {
         margin-bottom: 1vh;
         padding-left: 3vw !important;
         text-align: center;
-    }
-
-    body .Producten_Body {
-        
     }
 
     .producten {
