--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -91,7 +91,17 @@ h1 {
     padding-right: 2vw;
 }
 
-
+p {
+    font-family: "guanabara-sans", sans-serif;
+    font-weight: 400;
+    cursor: default;
+    font-size: 2vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    padding-bottom: 1vw;
+    font-style: italic;
+    color: #ebcd9b;
+}
 
 ::selection {
     color: #cb6c32;
@@ -297,7 +307,7 @@ button.volgende {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: #ffffff;
+    background-color: #cb6c32;
 }
 
 .carousel-images {
@@ -318,11 +328,36 @@ button.volgende {
     background-color: #cb6c32;
     display: flex;
     justify-content: space-around;
+    flex-direction: row;
     margin-top: 20px;
+    height: 50vh;
 }
 
 .mini_producten {
     text-align: center;
+}
+
+.mini_producten img {
+    border-radius: 20px;
+}
+
+.titeltext_centered {
+    width: 100vw;
+    align-items: center;
+    text-align: center;
+    text-decoration: underline;
+    text-decoration: #ebcd9b;
+    margin-bottom: 10vh;
+}
+
+.reviews {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    padding: 20px;
+    background-color: #cb6c32;
+    height: 90vh;
+    margin: 5vh;
 }
 
 /*Dit is een preset voor phone compatability, dit gaan jullie nodig hebben als je de testgrootte en knoppenformatie aan wil passen*/
@@ -503,5 +538,8 @@ button.volgende {
         flex-wrap: nowrap !important;
     }
 
+    .mini_producten_container {
+        flex-direction: column;
+    }
 
 }
