--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -7,15 +8,16 @@
     font-style: normal;
 }
 
-.hamburger-menu {
-    display: none;
-}
-
 html, body {
     height: 100%;
     margin: 0;
     overflow-y: auto;
     background-color: #cb6c32;
+}
+
+/* Hamburger niet weergeven als het een groot scherm */
+.hamburger-menu {
+    display: none;
 }
 
 header {
@@ -62,6 +64,7 @@ footer {
     padding-top: 10vh;
 }
 
+/* Tekst */
 h2 {
     font-family: "guanabara-sans", sans-serif;
     font-weight: 450;
@@ -108,6 +111,7 @@ p {
     background: #ebcd9b;
   }
 
+  /* Knoppen voor de carrousel (ChatGPT), plaatje uitendelijk vervangen */
 button {
     position: absolute;
     top: 50%;
@@ -175,20 +179,12 @@ button.volgende {
     margin: 0px 0px 0px 0px;
 }
 
-
-.titeltekst {
-    flex: 1; /* Zorg dat de tekst de rest van de ruimte inneemt */
-    display: flex;
-    flex-direction: column;
-}
-
 .producten {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-end;    
-    height: 5vh;
     padding-bottom: 5%;
     padding-top: 1%;
 }
@@ -210,16 +206,6 @@ button.volgende {
 
 #Kourabiedes {
     padding-bottom: 10%;
-}
-
-#Tsoureki {
-    text-align: end;
-    display: flex;
-    align-items: flex-start;
-}
-
-#Tsoureki_afbl {
-    justify-self: flex-end;
 }
 
 .ons_team {
@@ -302,6 +288,7 @@ button.volgende {
     cursor: pointer;
 }
 
+/* Carrousel css, classes met chat, inhoud van css zelf geschreven */
 .carousel {
     position: relative !important;
     width: 100%;
@@ -324,7 +311,7 @@ button.volgende {
     object-fit: cover;
     flex-shrink: 0;
 }
-
+/* Producten op de homepage */
 .mini_producten_container {
     background-color: #cb6c32;
     display: flex;
@@ -340,7 +327,7 @@ button.volgende {
 .mini_producten img {
     border-radius: 20px;
 }
-
+ /* H1 gecentreerd, gebruikt op de homepage*/
 .titeltext_centered {
     width: 100vw;
     align-items: center;
@@ -365,8 +352,9 @@ button.volgende {
     #container p {
         font-size: 10vw !important;
     }
+    /* Tekst op telefoon */
     h2 {
-        font-size: 7vw;
+        font-size: 10vw;
         padding-left: 3vw !important;
         padding-right: 3vw !important;
         padding-bottom: 2vh;
@@ -380,6 +368,10 @@ button.volgende {
         text-align: center;
     }
 
+    p {
+        font-size: 10vw !important;
+    }
+
     .producten {
         flex-direction: column;
         justify-content: flex-start;
@@ -389,7 +381,7 @@ button.volgende {
     .melomakarona {
         padding-bottom: 20%;
     }
-
+    /* Header + hamburger menu, hamburger classes zijn chat, inhoud  */
     header {
         height: 30vw;
     }
@@ -475,12 +467,13 @@ button.volgende {
         transition: all 0.3s ease-in-out;
     }
 
-    
+    /* Carrousel knoppen niet laten zien op telefoon */
     button.vorige,
     button.volgende {
         display: none;
     }
 
+    /* Weergeven als menu open is */
     .menu-items {
         display: none;
         position: absolute;
@@ -508,7 +501,7 @@ button.volgende {
     .menu-open .menu-items {
         display: block;
     }
-
+    /* Van hamburger tot kruis, chatgpt */
     .menu-open .hamburger-icon span:first-child {
         transform: rotate(45deg) translate(0.8vw, 1.3vw);
     }
@@ -521,7 +514,7 @@ button.volgende {
         transform: rotate(-45deg) translate(3.4vw, -4vw);
     }
 
-
+    /* Kleine formaataanpassingen */
     .product_afbeelding {
         width:  80vw;
         height : 75vw;
