--- a/BakkerEi/style.css
+++ b/BakkerEi/style.css
@@ -11,6 +11,7 @@
 html, body {
     height: 100%;
     margin: 0;
+    width: 100%;
     overflow-y: auto;
     background-color: #cb6c32;
 }
@@ -41,6 +42,7 @@ header {
 main {
     flex: 1;
     overflow-y: auto;
+    width: 100vw;
 }
 
 footer {
@@ -67,7 +69,7 @@ footer {
 /* Tekst */
 h2 {
     font-family: "guanabara-sans", sans-serif;
-    font-weight: 450;
+    font-weight: 650;
     font-style: normal;
     font-size: 3vw;
     cursor: default;
@@ -75,8 +77,7 @@ h2 {
     flex-shrink: inherit;
     padding-left: 2vw;
     padding-right: 1vw;
-    padding-bottom: 1vw;
-    font-style: italic;
+    padding-top: 2vw;
 }
 
 h2 .contact{
@@ -96,9 +97,9 @@ h1 {
 
 p {
     font-family: "guanabara-sans", sans-serif;
-    font-weight: 400;
+    font-weight: 450;
     cursor: default;
-    font-size: 2vw;
+    font-size: 2.3vw;
     padding-left: 2vw;
     padding-right: 2vw;
     padding-bottom: 1vw;
@@ -221,7 +222,7 @@ button.volgende {
 
 .ons_merk {
     height: 50vh;   
-    padding-bottom: 5%;
+    padding-bottom: 20vw;
     text-align: right !important;
 }
 
@@ -349,12 +350,13 @@ button.volgende {
 
 /*Dit is een preset voor phone compatability, dit gaan jullie nodig hebben als je de testgrootte en knoppenformatie aan wil passen*/
 @media screen and (max-width: 767px) {
+
     #container p {
-        font-size: 10vw;
+        font-size: 5vw;
     }
     /* Tekst op telefoon */
     h2 {
-        font-size: 10vw;
+        font-size: 7.5vw;
         padding-left: 3vw !important;
         padding-right: 3vw !important;
         padding-bottom: 2vh;
@@ -362,14 +364,15 @@ button.volgende {
     }
 
     h1 {
-        font-size: 15vw;
+        font-size: 10vw;
         margin-bottom: 1vh;
         padding-left: 3vw !important;
         text-align: center;
     }
 
     p {
-        font-size: 10vw !important;
+        font-size: 6vw !important;
+        text-align: center;
     }
 
     .producten {
@@ -533,6 +536,12 @@ button.volgende {
 
     .mini_producten_container {
         flex-direction: column;
+    }
+
+    .reviews {
+        flex-direction: column;
+        align-items: center;
+        gap: 5vh;
     }
 
 }
